[workspace]
resolver = "2"

members = [
    "kernel/mm",
    "kernel/arch/riscv64", "kernel/config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Han Wang <wanghan192@mails.ucas.ac.cn>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/happynumb-wh/rust-ucas-os.git"
repository = "https://github.com/happynumb-wh/rust-ucas-os.git"
keywords = ["rust-ucas-os", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
config = { path = "kernel/config" }
mm = { path = "kernel/mm" }
riscv64 = { path = "kernel/arch/riscv64" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
